--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
     "ng-angular-popup": "^0.4.7",
+    "razorpay": "^2.9.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
